--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=***
-DB_PASSWORD=***
-DB_NAME=***
+DB_USER=admin
+DB_PASSWORD=admin123
+DB_NAME=songsdata
 
 LOG_LEVEL=debug
 
